# corridor

./: .gitignore  package.json  readme.md  vercel.json
android/: .gitignore  README.md  TO_APK.md  build-release.bat  build.gradle  deploy-to-web.bat  generate-keystore.bat  gradle.properties  gradlew.bat  local.properties.example  settings.gradle
android/app/: build.gradle
choco-master/: .gitignore  .vercelignore  LICENSE  README.md  package-lock.json  package.json  vercel.json
choco-master/backend/: .env.example  drizzle.config.ts  package.json
choco-master/extension/: background.js  content.js  manifest.json
client/: README.md  main.cpp  run_sync.vbs  sync.cpp
clipboard-sync-v2/: README.md
linux/: .gitignore  Cargo.toml  DEVELOPMENT_STATUS.md  QUICKSTART.md  README.md  build.sh  corridor.service  requirements.txt  setup.py  show_history.py
linux/dialogs/: about_dialog.py  broadcast_dialog.py  help_dialog.py  instance_check_dialog.py  settings_dialog.py  setup_dialog.py  show_history.py
linux/scripts/: build-appimage.sh  build.sh  install.sh
linux/src/: __init__.py  clipboard.rs  clipboard_manager.py  config.rs  config_manager.py  history.rs  main.py  main.rs  notification.py  tray.rs  tray_old.rs  websocket.rs  websocket_client.py
server/: README.md  package.json
server/web/: .env.example  README.md  SEO_SETUP.md  package-lock.json  package.json  tailwind.config.js
server/worker/: README.md  package.json  (+2 more)
sync-v2/: README.md
windows/: .gitignore  CheckAutoStart.ps1  Corridor.csproj  Program.cs  README.md  VERIFY_AUTOSTART.MD  app.manifest
(+260 files in other folders)
