[package]
name = "corridor"
version = "1.0.0"
edition = "2021"
authors = ["Ravi Kumar <corridor@rknain.com>"]
description = "Real-time clipboard synchronization for Linux"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Clipboard
arboard = "3.4"
clipboard-master = "4.0.0-beta.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System integration
dirs = "5.0"
notify-rust = "4.11"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }
futures-util = "0.3"
base64 = "0.22"
single-instance = "0.3"

# System tray
ksni = "0.2"

# URL parsing
url = "2.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
